Thr, 14 Oct 2004, Chip Kent

1. Improved the output formatting.  For some cases, the columns of 
   numbers would run together.

Wed, 13 Oct 2004, Chip Kent

1. Improved the script to build official releases so that it appends the
   version number to the directory.

2. Added an example input file directory with a few entries.

Wed, 8 Sept 2004, Daniel R. Fisher

1.  In the constructor function for QMCWalker, set the trial step size, dR2,
    to 0.  It was being used uninitialized and causing problems with the 
    calculation of the effective time step.

2.  In QMCManager::writeEnergyResultsSummary(ostream & strm), added the total
    number of samples collected to the results summary.  

3.  In QMcBeaver.cpp, added a Total Samples heading for the column with the 
    total number of samples in the global results. 


Mon, 30 August 2004, Daniel R. Fisher

1.  Got rid of the need to read the distributions from files in 
    QMCDansWalkerInitialization by using CubicSplines.  The resulting method is
    much faster.  The distributions are now stored in the AngleDistributions 
    and RadialDistributions classes.


Mon, 30 August 2004, Daniel R. Fisher

1.  Changed configure.py to include settings for the cray_x1 computer.

2.  Added the class QMCGreensRatioComponent.  The Greens function
    calculations were causing numerical overflow problems for large
    molecules.  This class keeps track of a quantity of the form
    k*a^b*exp(c), which is the form of the Greens function components
    in the importance sampling parts of the code.


Thurs, 29 July 2004, Chip Kent

1. Included Amos Anderson's changes to improve the formatting of
   the output.  These changes make the output much easier to read.


Thurs, 29 July 2004, Chip Kent

1. Included Amos Anderson's changes to the build procedure.  These changes
   make it possible to remove the annoying src/Makefile.dep file which 
   constantly changes in CVS.  In addition, the new build procedure makes