@@ -889,36 +889,36 @@ SEARCHENGINE           = NO
 # starts the search engine (doxysearch) with the correct parameters. 
 # A script with this name will be generated by doxygen.
 
-CGI_NAME               = search.cgi
+#CGI_NAME               = search.cgi
 
 # The CGI_URL tag should be the absolute URL to the directory where the 
 # cgi binaries are located. See the documentation of your http daemon for 
 # details.
 
-CGI_URL                = 
+#CGI_URL                = 
 
 # The DOC_URL tag should be the absolute URL to the directory where the 
 # documentation is located. If left blank the absolute path to the 
 # documentation, with file:// prepended to it, will be used.
 
-DOC_URL                = 
+#DOC_URL                = 
 
 # The DOC_ABSPATH tag should be the absolute path to the directory where the 
 # documentation is located. If left blank the directory on the local machine 
 # will be used.
 
-DOC_ABSPATH            = 
+#DOC_ABSPATH            = 
 
 # The BIN_ABSPATH tag must point to the directory where the doxysearch binary 
 # is installed.
 
-BIN_ABSPATH            = /exec/doxygen/doxygen_current/bin/
+#BIN_ABSPATH            = /exec/doxygen/doxygen_current/bin/
 
 # The EXT_DOC_PATHS tag can be used to specify one or more paths to 
 # documentation generated for other projects. This allows doxysearch to search 
 # the documentation for these projects as well.
 
-EXT_DOC_PATHS          = 
+#EXT_DOC_PATHS          = 
 
 
 
